--- a/client/src/assets/scss/auth.scss
+++ b/client/src/assets/scss/auth.scss
@@ -58,13 +58,14 @@
   align-items: center;
   border-radius: var(--border-radius);
   background-color: var(--main-color);
-  border: 1px solid var(--secondary-color);
+  border: 1px solid var(--main-color);
   color: var(--background-dark-color);
   cursor: pointer;
 
   &:hover,
   &:active {
     background-color: var(--secondary-color);
+    border-color: var(--secondary-color);
   }
 
   &:disabled,
