--- a/client/src/assets/scss/common-classes.scss
+++ b/client/src/assets/scss/common-classes.scss
@@ -11,7 +11,7 @@ a.Link:visited {
   align-items: center;
   padding: 0 1rem;
   background-color: var(--main-color);
-  border: 1px solid var(--secondary-color);
+  border: 1px solid var(--main-color);
   border-radius: var(--border-radius);
   color: var(--background-dark-color);
   cursor: pointer;
@@ -19,6 +19,7 @@ a.Link:visited {
   &:hover,
   &:active {
     background-color: var(--secondary-color);
+    border-color: var(--secondary-color);
   }
 
   &:disabled,
