--- a/client/src/components/Navigation/Navigation.module.scss
+++ b/client/src/components/Navigation/Navigation.module.scss
@@ -2,21 +2,10 @@
   height: 4rem;
   display: flex;
   align-items: stretch;
-  justify-content: space-between;
   padding: 0 1rem;
   border-bottom: 1px solid var(--main-color);
 }
 
-.NavigationItem {
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-bottom: 3px solid transparent;
-  padding: 0 1rem;
-
-  &.Active,
-  &:hover {
-    border-color: var(--secondary-color);
-  }
+.Spacer {
+  flex-grow: 1;
 }
