styling: contacts in contact list and search

--- a/client/src/components/Auth/PasswordResest/PasswordReset.module.scss
+++ b/client/src/components/Auth/PasswordResest/PasswordReset.module.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/scss/auth.scss';
+@import '../auth.scss';
 
 .PasswordInput {
   border-radius: var(--border-radius) var(--border-radius) 0 0;
