--- a/client/src/components/Auth/Register/Register.module.scss
+++ b/client/src/components/Auth/Register/Register.module.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/scss/auth.scss';
+@import '../auth.scss';
 
 .LoginInput {
   border-radius: var(--border-radius) var(--border-radius) 0 0;
