--- a/client/src/components/Contacts/ContactsList/ContactList.module.scss
+++ b/client/src/components/Contacts/ContactsList/ContactList.module.scss
@@ -1,11 +1,8 @@
-.Container {
+.List {
+  height: calc(100vh - 4rem);
   padding: 1rem 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.SearchResult {
-  margin-top: 1rem;
-  width: 100%;
+  overflow: auto;
 }
