--- a/client/src/components/Navigation/Navigation.module.scss
+++ b/client/src/components/Navigation/Navigation.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: stretch;
   padding: 0 1rem;
-  border-bottom: 1px solid var(--main-color);
+  border-bottom: 1px solid var(--secondary-color);
 }
 
 .Spacer {
