--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,5 +1,6 @@
 // @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap');
 @import './assets/scss/colors.scss';
 @import './assets/scss/common-vars.scss';
 @import './assets/scss/common-classes.scss';
@@ -90,7 +91,7 @@ a:visited {
 
 h1 {
   font-size: 1.2rem;
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 1rem;
   text-align: center;
 }
@@ -102,7 +103,8 @@ p {
 
 body {
   // font-family: 'Quicksand', sans-serif;
-  font-family: 'Poppins', sans-serif;
+  // font-family: 'Poppins', sans-serif;
+  font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
