--- a/client/src/components/Contacts/FindContacts/FoundContact/FoundContact.module.scss
+++ b/client/src/components/Contacts/FindContacts/FoundContact/FoundContact.module.scss
@@ -1,6 +1,6 @@
 @import '../../contacts.scss';
 
-.ContactActionButtons {
+.ActionButtons {
   flex-grow: 1;
   display: flex;
   align-items: flex-end;
@@ -8,7 +8,7 @@
   margin-top: 0.5rem;
 }
 
-.ContactActionButton {
+.ActionButton {
   margin: 0;
 }
 
