--- a/client/src/assets/scss/common-classes.scss
+++ b/client/src/assets/scss/common-classes.scss
@@ -4,3 +4,7 @@ a.Link:visited {
   text-decoration: underline;
 }
 
+.ButtonSpinner {
+  margin: 0 auto !important;
+  height: 1.5rem !important;
+}
