--- a/client/src/components/Contacts/contacts.scss
+++ b/client/src/components/Contacts/contacts.scss
@@ -69,12 +69,15 @@
   margin: 0 auto;
   margin-bottom: 0.5rem;
   padding-left: 2rem;
-  display: flex;
-  justify-items: stretch;
+  display: block;
 }
 
 .ExtraDetailsCard {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
   padding: 0.5rem 1.5rem 0.5rem 0.5rem;
   border-radius: var(--border-radius);
   background-color: var(--main-color);
