--- a/client/src/components/Profile/EditProfile/EditProfile.module.scss
+++ b/client/src/components/Profile/EditProfile/EditProfile.module.scss
@@ -17,8 +17,9 @@
  @import '../../../assets//scss/buttons.scss';
 
 .Content {
-  margin-top: 1rem;
-  padding: 0 2rem;
+  margin: 1rem auto;
+  width: 80%;
+  max-width: 40rem;
 }
 
 .FieldHeader {
