Sockets: autoupdates. Part 1

--- a/client/src/components/Contacts/contacts.scss
+++ b/client/src/components/Contacts/contacts.scss
@@ -24,6 +24,7 @@
   padding: 0.5rem 1.5rem 0.5rem 0.5rem;
   border-radius: var(--border-radius);
   background-color: var(--main-color);
+  box-shadow: 0 2px 2px 2px #6161614d;
 }
 
 .ContactInfo {
@@ -81,4 +82,5 @@
   padding: 0.5rem 1.5rem 0.5rem 0.5rem;
   border-radius: var(--border-radius);
   background-color: var(--main-color);
+  box-shadow: 0 2px 2px 2px #6161614d;
 }
